[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Kevin Del Castillo <quebin31@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
boolinator = "2.4.0"
common_macros = "0.1.1"
itertools = "0.9.0"
lazy_static = "1.4.0"
